--- a/src/LiveTunes/MainPage.xaml
+++ b/src/LiveTunes/MainPage.xaml
@@ -1,4 +1,5 @@
-﻿<phone:PhoneApplicationPage xmlns:my="clr-namespace:Microsoft.Advertising.Mobile.UI;assembly=Microsoft.Advertising.Mobile.UI"  
+﻿<phone:PhoneApplicationPage 
+    xmlns:my="clr-namespace:Microsoft.Advertising.Mobile.UI;assembly=Microsoft.Advertising.Mobile.UI"  
     x:Class="LiveTunes.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -18,6 +19,7 @@
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.Resources>
+            <!--<utils:Strings x:Key="LocStrings" />-->
             <utils:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
             <utils:NullVisibilityConverter x:Key="NullVisibilityConverter" />
             <utils:StringVisibilityConverter x:Key="StringVisibilityConverter" />
@@ -31,21 +33,19 @@
             <RowDefinition Height="80" />
         </Grid.RowDefinitions>
 
-        <controls:Panorama Title="livetunes" Grid.Row="0" Background="#005999" Name="MainPanorama">
-            <!--<controls:Panorama.Background>
-                <ImageBrush ImageSource="Images/PanoramaBackground.jpg"/>
-            </controls:Panorama.Background>-->
+        <controls:Pivot Title="livetunes" Grid.Row="0" Background="#005999" Name="MainPivot">
 
-            <controls:PanoramaItem Header="now playing" Visibility="{Binding NowPlaying, Converter={StaticResource NullVisibilityConverter}}">
+            <!--{Binding Source={StaticResource LocStrings}, Path=NowPlaying_Title}-->
+            <controls:PivotItem Header="now playing" Visibility="{Binding NowPlaying, Converter={StaticResource NullVisibilityConverter}}">
                 <StackPanel>
                     <TextBlock Text="{Binding NowPlaying.Artist.Name}" Style="{StaticResource PhoneTextExtraLargeStyle}" />
                     <TextBlock Text="{Binding NowPlaying.Album.Name}" Style="{StaticResource PhoneTextLargeStyle}" />
                     <Image Width="256" Height="256" Source="{Binding NowPlayingArt}" HorizontalAlignment="Left" />
                     <TextBlock Text="{Binding NowPlaying.Name}" Style="{StaticResource PhoneTextLargeStyle}" />
                 </StackPanel>
-            </controls:PanoramaItem>
+            </controls:PivotItem>
 
-            <controls:PanoramaItem Header="my concerts">
+            <controls:PivotItem Header="my concerts">
                 <Grid>
                     <ScrollViewer>
                         <StackPanel>
@@ -66,9 +66,9 @@
                         </StackPanel>
                     </ScrollViewer>
                 </Grid>
-            </controls:PanoramaItem>
+            </controls:PivotItem>
 
-            <controls:PanoramaItem Header="tonight">
+            <controls:PivotItem Header="tonight">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -88,9 +88,9 @@
                         </ListBox.ItemTemplate>
                     </ListBox>
                 </Grid>
-            </controls:PanoramaItem>
+            </controls:PivotItem>
 
-            <controls:PanoramaItem Header="all concerts">
+            <controls:PivotItem Header="all concerts">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -113,9 +113,9 @@
                         </ListBox.ItemTemplate>
                     </ListBox>
                 </Grid>
-            </controls:PanoramaItem>
+            </controls:PivotItem>
 
-            <controls:PanoramaItem Header="settings">
+            <controls:PivotItem Header="settings">
                 <StackPanel>
                     <Grid Margin="12,20,0,0">
                         <Grid.RowDefinitions>
@@ -127,7 +127,7 @@
                             <ColumnDefinition />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                    
+
                         <TextBlock Grid.Column="0" Text="show events within:" TextWrapping="Wrap" VerticalAlignment="Center"/>
                         <TextBox Grid.Column="1" Text="{Binding Distance}" HorizontalAlignment="Stretch" Width="Auto" InputScope="TelephoneNumber" LostFocus="DistanceTextBox_LostFocus" VerticalAlignment="Center" />
                         <Button Grid.Column="2" Content="{Binding DistanceUnitsString}" HorizontalAlignment="Right" Click="UnitsButton_Click" VerticalAlignment="Center" />
@@ -138,9 +138,9 @@
 
                     <Button Name="DbgSyncButton" Content="sync now" Margin="0,20,0,0" Visibility="Collapsed" Click="DbgSyncButton_Click" />
                 </StackPanel>
-            </controls:PanoramaItem>
+            </controls:PivotItem>
 
-            <controls:PanoramaItem Header="about">
+            <controls:PivotItem Header="about">
                 <Grid>
                     <TextBlock Text="livetunes (c) 2012 wavecrash software" TextAlignment="Center" />
                     <StackPanel>
@@ -149,8 +149,10 @@
                     </StackPanel>
                     <Button Content="rate us on the marketplace" VerticalAlignment="Bottom" Click="RateButton_Click" />
                 </Grid>
-            </controls:PanoramaItem>
-        </controls:Panorama>
+            </controls:PivotItem>
+
+        </controls:Pivot>
+        
         <StackPanel Grid.Row="1" Background="#005999">
             <ProgressBar HorizontalAlignment="Stretch" IsIndeterminate="{Binding IsLoadingAny}" Foreground="White" Visibility="{Binding IsLoadingAny, Converter={StaticResource BoolVisibilityConverter}}" />
         </StackPanel>
