--- a/WP8/MainPage.xaml
+++ b/WP8/MainPage.xaml
@@ -16,7 +16,29 @@
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
 
-    <!--LayoutRoot is the root grid where all page content is placed-->
+	<phone:PhoneApplicationPage.Resources>
+		<phone:JumpListItemBackgroundConverter x:Key="BackgroundConverter"/>
+		<phone:JumpListItemForegroundConverter x:Key="ForegroundConverter"/>
+
+		<Style x:Key="LongListSelectorJumpListStyle" TargetType="phone:LongListSelector">
+			<Setter Property="GridCellSize"  Value="111,111"/>
+			<Setter Property="LayoutMode" Value="Grid" />
+			<Setter Property="Margin" Value="18,12,0,0"/>
+			<Setter Property="ItemTemplate">
+				<Setter.Value>
+					<DataTemplate>
+						<Border Background="{Binding Converter={StaticResource BackgroundConverter}}" Margin="6" >
+							<TextBlock Text="{Binding Key}" 
+                                           FontFamily="{StaticResource PhoneFontFamilySemiBold}"
+                                           FontSize="48" Padding="11,0,0,0"
+                                           Foreground="{Binding Converter={StaticResource ForegroundConverter}}" VerticalAlignment="Bottom" />
+						</Border>
+					</DataTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
+	</phone:PhoneApplicationPage.Resources>
+	
 	<Grid x:Name="LayoutRoot" Background="#005999" >
         <Grid.Resources>
             <!--<utils:Strings x:Key="LocStrings" />-->
@@ -102,17 +124,32 @@
                         <TextBlock Text="{Binding AllConcertsError}" TextWrapping="Wrap" TextAlignment="Center" />
                         <Button Content="retry sync" Click="SyncButton_Click" />
                     </StackPanel>
-                    <ListBox Grid.Row="2" Name="AllConcertsListBox" Margin="0,0,-12,0" ItemsSource="{Binding AllConcerts}" Tap="ConcertListBox_Tap">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Margin="0,0,0,12" Width="432" Height="78">
-                                    <TextBlock Text="{Binding Headliner.ArtistName}" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                                    <TextBlock Text="{Binding DateAndPlace}" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </Grid>
+					<phone:LongListSelector Grid.Row="2" Name="AllConcertsListSelector" ItemsSource="{Binding AllConcerts}" SelectionChanged="AllConcertsListSelector_OnSelectionChanged" HideEmptyGroups="true" IsGroupingEnabled="true" LayoutMode="List" JumpListStyle="{StaticResource LongListSelectorJumpListStyle}">
+						<phone:LongListSelector.GroupHeaderTemplate>
+							<DataTemplate>
+								<Border Background="Transparent" Padding="5">
+									<Border Background="Transparent" BorderBrush="White" BorderThickness="2" Width="62" Height="62" Margin="0,0,18,0" HorizontalAlignment="Left">
+										<TextBlock Text="{Binding Key}" 
+                                               Foreground="{StaticResource PhoneForegroundBrush}" 
+                                               FontSize="48"
+                                               Padding="6"
+                                               FontFamily="{StaticResource PhoneFontFamilySemiLight}"
+                                               HorizontalAlignment="Left"
+                                               VerticalAlignment="Center"/>
+									</Border>
+								</Border>
+							</DataTemplate>
+						</phone:LongListSelector.GroupHeaderTemplate>
+						<phone:LongListSelector.ItemTemplate>
+							<DataTemplate>
+								<StackPanel Margin="0,0,0,12" Width="432" Height="78">
+									<TextBlock Text="{Binding Headliner.ArtistName}" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+									<TextBlock Text="{Binding DateAndPlace}" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+								</StackPanel>
+							</DataTemplate>
+						</phone:LongListSelector.ItemTemplate>
+					</phone:LongListSelector>
+				</Grid>
             </controls:PivotItem>
 
             <controls:PivotItem Header="settings">
